--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,28 @@
-#
-# application.yml — главный конфигурационный файл Spring Boot.
+spring:
+  datasource:
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    show-sql: true
+    hibernate.ddl-auto: none
+  liquibase:
+    change-log: classpath:db/migration/db.changelog-master.yml
+    enabled: true
+    drop-first: false
 
-Что нужно сделать:
-  - Указать настройки подключения к базе данных.
-  - Указать порт приложения.
-  - Настроить параметры безопасности и JWT.
-  - Включить Swagger UI.
+jwt:
+  secret: ${JWT_SECRET}
+  token:
+    lifespan: 90000000
+  refresh:
+    token:
+      lifespan: 604800000
+
+app:
+  encryption:
+    key: ${ENCRYPTION_SECRET}
+
+server:
+  port: 8080
